feat: 単一の宿泊施設を取得するAPI定義を追加
