# features/accommodations/types/index.ts
@@ -1,24 +1,9 @@
-export type AccommodationForCard = {
-  id: number;
-  name: string;
-  image: string;
-  address?: string;
-  checkIn: string;
-  checkOut: string;
-  bookingUrl?: string;
-  bookingId?: string;
-};
+import { z } from "zod";
+import {
+  accommodationForDetailSchema,
+  accommodationForListSchema,
+} from "@/lib/zod/schema/accommodations";
 
-export type Accommodation = {
-  id: number;
-  name: string;
-  image: string;
-  address: string;
-  checkIn: string;
-  checkOut: string;
-  reservationPrice: number;
-  notes: string;
-  bookingUrl: string;
-  tripAdvisorUrl: string;
-  phoneNumber: string;
-};
+export type AccommodationForCard = z.infer<typeof accommodationForListSchema>;
+
+export type Accommodation = z.infer<typeof accommodationForDetailSchema>;
