# services/api/swagger.yml
@@ -664,13 +664,13 @@ paths:
                           type: number
                         name:
                           type: string
+                        image:
+                          type: string
                         address:
                           type: string
                         checkIn:
                           type: string
                         checkOut:
-                          type: string
-                        image:
                           type: string
                         bookingUrl:
                           type: string
@@ -679,9 +679,9 @@ paths:
                       required:
                         - id
                         - name
+                        - image
                         - checkIn
                         - checkOut
-                        - image
                   totalPages:
                     type: number
                 required:
@@ -689,6 +689,83 @@ paths:
                   - totalPages
         "403":
           description: ユーザー検証に失敗
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                required:
+                  - message
+  /accommodations/{id}:
+    get:
+      summary: 単一の宿泊施設の取得
+      tags:
+        - accommodations
+      parameters:
+        - schema:
+            type: number
+          required: true
+          name: id
+          in: path
+      responses:
+        "200":
+          description: 予約した宿泊施設取得成功
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  accommodation:
+                    type: object
+                    properties:
+                      id:
+                        type: number
+                      tripId:
+                        type: number
+                      name:
+                        type: string
+                      image:
+                        type: string
+                      address:
+                        type: string
+                      checkIn:
+                        type: string
+                      checkOut:
+                        type: string
+                      reservationPrice:
+                        type: number
+                      notes:
+                        type: string
+                      bookingUrl:
+                        type: string
+                      tripAdvisorUrl:
+                        type: string
+                      phoneNumber:
+                        type: string
+                    required:
+                      - id
+                      - tripId
+                      - name
+                      - image
+                      - checkIn
+                      - checkOut
+                required:
+                  - accommodation
+        "403":
+          description: ユーザー検証に失敗
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                required:
+                  - message
+        "404":
+          description: 宿泊施設が存在しないので取得失敗
           content:
             application/json:
               schema:
